tests/optional/optional.exp

nullable.js:15:37,42: null
This type is incompatible with
nullable.js:17:5,9: number

nullable.js:15:37,42: undefined
This type is incompatible with
nullable.js:17:5,9: number

nullable.js:21:37,42: null
This type is incompatible with
nullable.js:23:5,9: number

nullable.js:21:37,42: undefined
This type is incompatible with
nullable.js:23:5,9: number

nullable.js:27:37,42: null
This type is incompatible with
nullable.js:29:5,9: number

nullable.js:27:37,42: undefined
This type is incompatible with
nullable.js:29:5,9: number

nullable.js:33:37,42: null
This type is incompatible with
nullable.js:35:5,9: number

nullable.js:33:37,42: undefined
This type is incompatible with
nullable.js:35:5,9: number

optional.js:1:23,23: undefined
This type is incompatible with
optional.js:1:23,27: number

optional.js:7:14,14: parameter x
Missing annotation

optional.js:7:27,27: element of rest parameter y
Missing annotation

optional.js:7:39,44: function call
Error:
optional.js:7:16,22: string
This type is incompatible with
optional.js:4:13,18: number

optional.js:9:1,8: function call
Error:
optional.js:9:7,7: number
This type is incompatible with
optional.js:7:30,35: string

optional.js:10:1,17: function call
Error:
optional.js:10:14,15: number
This type is incompatible with
optional.js:7:30,35: string

optional_param2.js:7:19,33: undefined
This type is incompatible with
optional_param2.js:7:9,14: number

undefined.js:8:14,17: property duck
Property cannot be accessed on possibly undefined value
undefined.js:1:5,5: undefined

undefined.js:8:14,17: property duck
Property cannot be accessed on possibly undefined value
undefined.js:3:21,29: undefined

undefined2.js:8:14,17: property duck
Property cannot be accessed on possibly undefined value
undefined2.js:1:5,5: undefined

undefined2.js:8:14,17: property duck
Property cannot be accessed on possibly undefined value
undefined2.js:4:9,11: undefined

Found 19 errors
